css/halo.css
/* Fix bouncing issue on iOS */
body {
  overflow-x: hidden;
  position: relative;
}

/* H0 */
.h0 {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 600;
    text-shadow: 0px 1px, 1px 0px, 1px 1px;

    /* Black */
    color: #131415;
}

/* H2 */
.h2 {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 700;
    letter-spacing: 0.1vh;

    /* Blue */
    color: #4E5FFF;
}

/* subtitle */
.subtitle {
    font-family: 'Open Sans';

    font-weight: 300;

    /* Grey */
    color: #7E8790;
}

.halo_section {
    padding-top: 10vh;
    padding-bottom: 10vh;
}

.header_left {
    background-image: url("../images/header_left.png");
    background-size:cover;
    object-fit: cover;
    height: calc(107vh - 56px);
    width: 100%;
}

.header_right {
    background-image: url("../images/header_right.png");
    background-size:cover;
    object-fit: cover;
    height: calc(107vh - 56px);
    width: 100%;
}

.grey_bg {
    background-image:url('../images/grey_bg.png');
    background-size:cover;
    object-fit: cover;
}

.header_form_section {
    border-radius: 0.8vh;
    box-shadow: 0px 0px 1px 1px rgb(245,245,245);
    margin-left: 6vw;
    padding-top: 3vh;
    padding-bottom: 2vh;
    padding-left: 2vw;
    padding-right: 2vw;
    background-color: white;
    position: absolute;
    width: 90vh;
    z-index: 10;
}

.logo {
    background-image: url("../images/logo.png");
    background-size:cover;
}

.fees_panel:hover {
    box-shadow: 0px 0px 10px 10px rgb(245,245,245);
}

.fees_panel {
    font-size:16px;
    box-shadow: 0px 0px 2px 2px rgb(245,245,245);
    padding-top:5vh;
    padding-bottom:5vh;
    margin-left:1vw;
    margin-right:1vw;
    background-color:white;
}

ul{
    padding-left: 0;
    list-style:none;
}

li {
    padding-top: 1vh;
    font-family: 'Open Sans';
    font-weight: 300;
    /* Grey */
    color: #7E8790;
}

#social_features2:hover{
  z-index:1;
}

#social_features4:hover{
  z-index:1;
}

.halo_form {
    border-radius: 2vh;
}

.form-control {
    border-radius: 2.5vh;
    padding: 2.5vh;
}

.submit_form {
    width: 15vh;
    border-radius: 2.5vh !important;
}

.submit_form:hover {
    box-shadow: 0px 0px 10px 10px rgba(250,199,43,0.2);
}

.icon:hover {
    filter: drop-shadow(0px 0px 10px lightgrey);
}

#submit-form1:disabled {
    opacity:1.0;
}

#submit-form2:disabled {
    opacity:1.0;
}

.form-control::-webkit-input-placeholder { color: rgb(210,210,210); font-weight: lighter;} /* WebKit, Blink, Edge */
.form-control:-moz-placeholder { color: rgb(210,210,210); font-weight: lighter; } /* Mozilla Firefox 4 to 18 */
.form-control::-moz-placeholder { color: rgb(210,210,210); font-weight: lighter; } /* Mozilla Firefox 19+ */
.form-control:-ms-input-placeholder { color: rgb(210,210,210); font-weight: lighter; } /* Internet Explorer 10-11 */
.form-control::-ms-input-placeholder { color: rgb(210,210,210); font-weight: lighter; } /* Microsoft Edge */


/*********************************************************************************************************************
 * Mobile-specific styles
 *********************************************************************************************************************/

.header_top_m {
    background-image: url("../images/header_left.png");
    background-size:cover;
    object-fit: cover;
    height: 120vw;
    width: 100vw;
}

.header_bottom_m {
    background-image: url("../images/header_right.png");
    background-size:cover;
    object-fit: cover;
    height: 120vw;
    width: 100vw;
}

.header_form_section_m {
    border-radius: 0.8vh;
    box-shadow: 0px 0px 1px 1px rgb(245,245,245);
    margin-left: 9vw;
    margin-right: 9vw;
    padding-top: 4vh;
    padding-bottom: 3vh;
    padding-left: 3.5vw;
    padding-right: 3.5vw;
    background-color: white;
    position: absolute;
    z-index: 10;
}

.fees_panel_m:hover {
    box-shadow: 0px 0px 10px 10px rgb(245,245,245);
}

.fees_panel_m {
    box-shadow: 0px 0px 2px 2px rgb(245,245,245);
    padding-top:10vw;
    padding-bottom:10vw;
    /*margin-left:0.5vw;*/
    /*margin-right:0.5vw;*/
    background-color:white;
}

